Working on modal

--- a/home.html
+++ b/home.html
@@ -112,6 +112,8 @@
                 <div class="image_holder">
                     <span class="span_image"><img src="" alt="" /></span>
                 </div>
+                <h4 class="title"></h4>
+                <h6 class="date"></h6>
             </a>
         </div>
         <button class="next_btn"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
