--- a/singleBlog.html
+++ b/singleBlog.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="css/style_home.css">
     <link rel="stylesheet" href="css/style_single_blog.css">
     <script defer src="js/single_blog.js"></script>
+    <script defer src="js/modal.js"></script>
+
 
 </head>
 
@@ -61,9 +63,15 @@
                 <p class="content">
                 </p>
             </div>
+            <!----FOR MODAL------------------------------>
+            <dialog class="modal_container" id="modal">
+                <button class="button close_button">
+                    Close
+                </button>
+                <img src="" alt="">
+            </dialog>
         </div>
     </div>
-
 
     <!----------------------------------------------FOOTER-------------------------------------------------------------------------->
     <footer>
