finally done with all the requirements

--- a/singleBlog.html
+++ b/singleBlog.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/style_home.css">
     <link rel="stylesheet" href="css/style_single_blog.css">
     <script defer src="js/single_blog.js"></script>
-    <script defer src="js/modal.js"></script>
+    <!--- <script defer src="js/modal.js"></script> -->
 
 
 </head>
@@ -68,7 +68,7 @@
                 <button class="button close_button">
                     Close
                 </button>
-                <img src="" alt="">
+                <img src="" class="modal_image" alt="">
             </dialog>
         </div>
     </div>
