--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             </div>
             <div class="right_part">
                 <div class="content">
-                    <h3>Bit About Myself</h3>
+                    <h3>A Bit About Myself</h3>
                     <p>
                         HELLO! I am Rukaiya and It's my own platform where I have showcased my adventures,
                         shared tips, and tried to provide inspiration to others.
