--- a/home.html
+++ b/home.html
@@ -37,6 +37,17 @@
     <script defer src="js/single_blog.js"></script>
     <script defer src="js/home.js"></script>
     <script defer src="js/slider.js"></script>
+    <!-- Hotjar Tracking Code for Adventurer's Log -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 3784463, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 </head>
 
 <body>
