--- a/singleBlog.html
+++ b/singleBlog.html
@@ -29,8 +29,17 @@
     <link rel="stylesheet" href="css/style_home.css">
     <link rel="stylesheet" href="css/style_single_blog.css">
     <script defer src="js/single_blog.js"></script>
-    <!--- <script defer src="js/modal.js"></script> -->
-
+    <!-- Hotjar Tracking Code for Adventurer's Log -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 3784463, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 
 </head>
 
