blog cards are clickable now

--- a/blog.html
+++ b/blog.html
@@ -70,16 +70,17 @@
     </div>
     <div class="blog_container">
         <div class="blog_box" onclick="getPosts()">
-            <div class="blog_img">
-                <img src="" alt="">
-            </div>
-            <div class="blog_text">
-                <span class="title"></span>
-                <span class="date"></span>
-                </a>
-                <a href="singleBlog.html" class="blogBtn">Read More</a>
-            </div>
+            <a class="main" href="singleBlog.html">
+                <div class="blog_img">
+                    <img src="" alt="">
+                </div>
+                <div class="blog_text">
+                    <span class="title"></span>
+                    <span class="date"></span>
+            </a>
+            <a href="singleBlog.html" class="blogBtn">Read More</a>
         </div>
+    </div>
     </div>
     <div class="load_more">
         <button class="load_moreBtn">Load More Blogs</button>
