--- a/home.html
+++ b/home.html
@@ -95,15 +95,14 @@
                 <div class="content">
                     <h2>How I Started</h2>
                     <p>
-                        For me traveling is a doorway to endless experiences. It broadens perspectives,
-                        exposes us to diverse cultures, cuisines, and landscapes. It's not just
-                        about the destinations; it's also about the journey, the people you meet,
-                        and the stories you collect along the way. Traveling can teach valuable lessons,
-                        foster personal growth, and create lifelong memories.
-                        I have traveled many countries after I moved to Norway. See my photo gallery here
+                        Passion for travel and documenting memories was the motivation
+                        of my Travel Blog. I like to share experience and discoveries
+                        while exploring new places.And this is how I created this
+                        personal diary to preserve memories.
+                        See my blogs here.
                     </p>
                     <div class="button_photo">
-                        <a href="gallery.html" class="btnPhoto">PHOTO GALLERY</a>
+                        <a href="blog.html" class="btnPhoto">My Blogs</a>
                     </div>
                 </div>
             </div>
@@ -112,7 +111,8 @@
 
 
     <!--------------------------SECTION 3------------------------->
-    <h2 class="heading_slider">Favourite Places</h2>
+    <h2 class="heading_slider">Favourite Places I Visited</h2>
+    <a href="blog.html" class="link_to_blog_page">SEE ALL BLOGS</a>
     <div class="gallery_wrap">
         <button class="prev_btn"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
         <div class="gallery">
@@ -139,7 +139,7 @@
     <ul class="footer_contact">
         <li> <a href="#" class="logo"><span class="firstLetter">A</span>dventurer's <span
                     class="firstLetter">L</span>og</a></li>
-        <li>Available On +0047 45698354</li>
+        <li>Available On +0047 99415259</li>
         <li><a href="contact.html">Send Me a Message</a></li>
         <li>@all rights reserved</li>
     </ul>
